# kicbac-python

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
openapi/: collectjs-options.md  hosted-field-options.md  kicbac.openapi.yaml  three-step.md
openapi/data/: amount-simulation.json  avs-codes.json  cvv-codes.json  response-codes.json  test-cards.json
openapi/scripts/: build-openapi.mjs  make-vectors.mjs
openapi/webhooks/: vectors.json
sdk-python/: AGENTS.md  README.md  pyproject.toml
sdk-python/src/kicbac/: __init__.py  _client.py  _constants.py  _core.py  _encode.py  _pagination.py  _redact.py  _transport.py  _xml.py  errors.py  types.py  webhooks.py
sdk-python/src/kicbac/models/: __init__.py  base.py  query.py  results.py  webhook.py
sdk-python/src/kicbac/resources/: __init__.py  _base.py  customers.py  invoices.py  plans.py  query.py  subscriptions.py  transactions.py
sdk-python/tests/: conftest.py  test_client.py  test_customers.py  test_encode.py  test_invoices.py  test_outcome.py  test_query.py  test_recurring.py  test_redact.py  test_retry.py  test_timeouts.py  test_transactions.py  test_webhooks.py
