[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicbac"
dynamic = ["version"]
description = "Official Python SDK for the Kicbac payments gateway"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Kicbac" }]
dependencies = ["httpx>=0.27,<1", "pydantic>=2.7,<3"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "respx>=0.22",
  "mypy>=1.13",
  "ruff>=0.8",
  "build",
]

[tool.hatch.version]
path = "src/kicbac/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kicbac"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["sandbox: hits the test gateway (nightly only)"]
addopts = "-m 'not sandbox'"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
